docker-registry/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-service
  namespace: docker
  labels:
    app: docker-registry-service
spec:
  type: ClusterIP
  ports:
  - name: docker-port
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: docker-registry-service
  sessionAffinity: None  
---
apiVersion: v1
kind: Service
metadata:
  name: registry-ui
  namespace: docker
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: docker-registry-service
